syntax = "proto3";

package product;

option go_package = "github.com/mayur-lomate-personal/grpc-order-product-app/product-service/grpc/api/v1";

import "google/api/annotations.proto";

service ProductService {
    rpc GetProductDetails(GetProductRequest) returns (GetProductResponse) {
        option (google.api.http) = {
            get: "/api/v1/products/{product_id}"
        };
    }
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse) {
        option (google.api.http) = {
            post: "/api/v1/products/{product_id}/stock"
            body: "*"
        };
    }
}

message GetProductRequest {
    int32 product_id = 1;
}

message GetProductResponse {
    int32 product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
}

message UpdateStockRequest {
    int32 product_id = 1;
    int32 quantity = 2; // Negative for reducing stock
}

message UpdateStockResponse {
    int32 product_id = 1;
    int32 new_stock = 2;
    string message = 3;
}